crates/ruff/src/rules/flake8_use_pathlib/snapshots/ruff__rules__flake8_use_pathlib__tests__PTH203_PTH203.py.snap
---
source: crates/ruff/src/rules/flake8_use_pathlib/mod.rs
---
PTH203.py:5:1: PTH203 `os.path.getatime` should be replaced by `Path.stat().st_atime`
  |
3 | from os.path import getatime
4 | 
5 | os.path.getatime("filename")
  | ^^^^^^^^^^^^^^^^ PTH203
6 | os.path.getatime(b"filename")
7 | os.path.getatime(Path("filename"))
  |

PTH203.py:6:1: PTH203 `os.path.getatime` should be replaced by `Path.stat().st_atime`
  |
5 | os.path.getatime("filename")
6 | os.path.getatime(b"filename")
  | ^^^^^^^^^^^^^^^^ PTH203
7 | os.path.getatime(Path("filename"))
  |

PTH203.py:7:1: PTH203 `os.path.getatime` should be replaced by `Path.stat().st_atime`
  |
5 | os.path.getatime("filename")
6 | os.path.getatime(b"filename")
7 | os.path.getatime(Path("filename"))
  | ^^^^^^^^^^^^^^^^ PTH203
  |

PTH203.py:10:1: PTH203 `os.path.getatime` should be replaced by `Path.stat().st_atime`
   |
10 | getatime("filename")
   | ^^^^^^^^ PTH203
11 | getatime(b"filename")
12 | getatime(Path("filename"))
   |

PTH203.py:11:1: PTH203 `os.path.getatime` should be replaced by `Path.stat().st_atime`
   |
10 | getatime("filename")
11 | getatime(b"filename")
   | ^^^^^^^^ PTH203
12 | getatime(Path("filename"))
   |

PTH203.py:12:1: PTH203 `os.path.getatime` should be replaced by `Path.stat().st_atime`
   |
10 | getatime("filename")
11 | getatime(b"filename")
12 | getatime(Path("filename"))
   | ^^^^^^^^ PTH203
   |


