crates/ruff/src/rules/flake8_use_pathlib/snapshots/ruff__rules__flake8_use_pathlib__tests__PTH205_PTH205.py.snap
---
source: crates/ruff/src/rules/flake8_use_pathlib/mod.rs
---
PTH205.py:6:1: PTH205 `os.path.getctime` should be replaced by `Path.stat().st_ctime`
  |
6 | os.path.getctime("filename")
  | ^^^^^^^^^^^^^^^^ PTH205
7 | os.path.getctime(b"filename")
8 | os.path.getctime(Path("filename"))
  |

PTH205.py:7:1: PTH205 `os.path.getctime` should be replaced by `Path.stat().st_ctime`
  |
6 | os.path.getctime("filename")
7 | os.path.getctime(b"filename")
  | ^^^^^^^^^^^^^^^^ PTH205
8 | os.path.getctime(Path("filename"))
  |

PTH205.py:8:1: PTH205 `os.path.getctime` should be replaced by `Path.stat().st_ctime`
   |
 6 | os.path.getctime("filename")
 7 | os.path.getctime(b"filename")
 8 | os.path.getctime(Path("filename"))
   | ^^^^^^^^^^^^^^^^ PTH205
 9 | 
10 | getctime("filename")
   |

PTH205.py:10:1: PTH205 `os.path.getctime` should be replaced by `Path.stat().st_ctime`
   |
 8 | os.path.getctime(Path("filename"))
 9 | 
10 | getctime("filename")
   | ^^^^^^^^ PTH205
11 | getctime(b"filename")
12 | getctime(Path("filename"))
   |

PTH205.py:11:1: PTH205 `os.path.getctime` should be replaced by `Path.stat().st_ctime`
   |
10 | getctime("filename")
11 | getctime(b"filename")
   | ^^^^^^^^ PTH205
12 | getctime(Path("filename"))
   |

PTH205.py:12:1: PTH205 `os.path.getctime` should be replaced by `Path.stat().st_ctime`
   |
10 | getctime("filename")
11 | getctime(b"filename")
12 | getctime(Path("filename"))
   | ^^^^^^^^ PTH205
   |


