crates/ruff/src/rules/flake8_use_pathlib/snapshots/ruff__rules__flake8_use_pathlib__tests__guarded.py.snap
---
source: crates/ruff/src/rules/flake8_use_pathlib/mod.rs
expression: diagnostics
---
- kind:
    PathlibAbspath: ~
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 22
  fix: ~
  parent: ~
- kind:
    PathlibChmod: ~
  location:
    row: 9
    column: 5
  end_location:
    row: 9
    column: 16
  fix: ~
  parent: ~
- kind:
    PathlibMkdir: ~
  location:
    row: 10
    column: 6
  end_location:
    row: 10
    column: 17
  fix: ~
  parent: ~
- kind:
    PathlibMakedirs: ~
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 14
  fix: ~
  parent: ~
- kind:
    PathlibRename: ~
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 12
  fix: ~
  parent: ~
- kind:
    PathlibReplace: ~
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 13
  fix: ~
  parent: ~
- kind:
    PathlibRmdir: ~
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 11
  fix: ~
  parent: ~
- kind:
    PathlibRemove: ~
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 12
  fix: ~
  parent: ~
- kind:
    PathlibUnlink: ~
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 12
  fix: ~
  parent: ~
- kind:
    PathlibGetcwd: ~
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 12
  fix: ~
  parent: ~
- kind:
    PathlibExists: ~
  location:
    row: 18
    column: 4
  end_location:
    row: 18
    column: 21
  fix: ~
  parent: ~
- kind:
    PathlibExpanduser: ~
  location:
    row: 19
    column: 5
  end_location:
    row: 19
    column: 26
  fix: ~
  parent: ~
- kind:
    PathlibIsDir: ~
  location:
    row: 20
    column: 6
  end_location:
    row: 20
    column: 22
  fix: ~
  parent: ~
- kind:
    PathlibIsFile: ~
  location:
    row: 21
    column: 7
  end_location:
    row: 21
    column: 24
  fix: ~
  parent: ~
- kind:
    PathlibIsLink: ~
  location:
    row: 22
    column: 8
  end_location:
    row: 22
    column: 25
  fix: ~
  parent: ~
- kind:
    PathlibReadlink: ~
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 14
  fix: ~
  parent: ~
- kind:
    PathlibStat: ~
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 10
  fix: ~
  parent: ~
- kind:
    PathlibIsAbs: ~
  location:
    row: 25
    column: 0
  end_location:
    row: 25
    column: 16
  fix: ~
  parent: ~
- kind:
    PathlibJoin: ~
  location:
    row: 26
    column: 0
  end_location:
    row: 26
    column: 15
  fix: ~
  parent: ~
- kind:
    PathlibBasename: ~
  location:
    row: 27
    column: 0
  end_location:
    row: 27
    column: 19
  fix: ~
  parent: ~
- kind:
    PathlibDirname: ~
  location:
    row: 28
    column: 0
  end_location:
    row: 28
    column: 18
  fix: ~
  parent: ~
- kind:
    PathlibSamefile: ~
  location:
    row: 29
    column: 0
  end_location:
    row: 29
    column: 19
  fix: ~
  parent: ~
- kind:
    PathlibSplitext: ~
  location:
    row: 30
    column: 0
  end_location:
    row: 30
    column: 19
  fix: ~
  parent: ~
- kind:
    PathlibOpen: ~
  location:
    row: 31
    column: 5
  end_location:
    row: 31
    column: 12
  fix: ~
  parent: ~
- kind:
    PathlibOpen: ~
  location:
    row: 33
    column: 0
  end_location:
    row: 33
    column: 7
  fix: ~
  parent: ~
- kind:
    PathlibGetcwd: ~
  location:
    row: 34
    column: 0
  end_location:
    row: 34
    column: 13
  fix: ~
  parent: ~

